# JaroAnim

./: CMakeLists.txt  compile_commands.json  temp.txt
examples/planets/src/: main.cpp
lib/: CMakeLists.txt
lib/headers/jaroAnim/: path.hpp
lib/headers/jaroAnim/core/: animator.hpp
lib/headers/jaroAnim/deformation/: ffd.hpp
lib/headers/jaroAnim/interpolation/: path.hpp
lib/src/: path.cpp
lib/src/core/: animator.cpp
lib/src/deformation/: ffd.cpp
lib/src/interpolation/: path.cpp
